[package]
name = "wallpaper-changer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
reqwest = {version="0.11.7", features = ["blocking", "json"]}
serde = "1.0.131"
serde_derive = "1.0.131"
wallpaper = {version="3.2.0", features = ["from_url"]}
dotenv = "0.15.0"
